Changed numbers for the first pages from lowercase roman to uppercase Roman

--- a/Capitoli/metodiAppresi.tex
+++ b/Capitoli/metodiAppresi.tex
@@ -2,10 +2,12 @@
 
 \section{Autoencoders}
 
-\section{Ballé 2018}
+\section{Reti di Compressione}
 
-\section{Cheng 2020}
+\subsection{Ballé 2018}
 
-\section{Wang 2022}
+\subsection{Cheng 2020}
+
+\subsection{Wang 2022}
 
 
