--- a/bibliografia.bib
+++ b/bibliografia.bib
@@ -117,9 +117,47 @@
   number={10},
   pages={3736-3764},
   doi={10.1109/TCSVT.2021.3101953}}
+@article{balle2018variational,
+  title={Variational image compression with a scale hyperprior},
+  author={Ball{\'e}, Johannes and Minnen, David and Singh, Saurabh and Hwang, Sung Jin and Johnston, Nick},
+  journal={arXiv preprint arXiv:1802.01436},
+  year={2018}
+}
 @misc{BPGImageformat,
   author = {Fabrice Bellard},
   title = {BPG Image format},
   howpublished = {\url{https://bellard.org/bpg/}},
   note = {Consultato: 17-10-2023}
+}
+@misc{PillowLibrary,
+  author = {Jeffrey A. Clark and contributors},
+  title = {Pillow, a PIL fork},
+  howpublished = {\url{https://python-pillow.org/}},
+  note = {Consultato: 17-10-2023}
+}
+@misc{OpenJPEGLibrary,
+  author = {Université de Louvain},
+  title = {OpenJPEG},
+  howpublished = {\url{https://www.openjpeg.org/}},
+  note = {Consultato: 17-10-2023}
+}@misc{VVCLibrary,
+  author = {Fraunhofer HHI},
+  title = {H.266 / VVC},
+  howpublished = {\url{https://www.hhi.fraunhofer.de/en/departments/vca/technologies-and-solutions/h266-vvc.html}},
+  note = {Consultato: 17-10-2023}
+}
+}@misc{CompressAILibrary,
+  author = {InterDigital Communications, Inc.},
+  title = {CompressAI},
+  howpublished = {\url{https://interdigitalinc.github.io/CompressAI/#}},
+  note = {Consultato: 17-10-2023}
+}
+@inproceedings{wang2003multiscale,
+  title={Multiscale structural similarity for image quality assessment},
+  author={Wang, Zhou and Simoncelli, Eero P and Bovik, Alan C},
+  booktitle={The Thrity-Seventh Asilomar Conference on Signals, Systems \& Computers, 2003},
+  volume={2},
+  pages={1398--1402},
+  year={2003},
+  organization={Ieee}
 }
