Added images and license file

--- a/bibliografia.bib
+++ b/bibliografia.bib
@@ -161,3 +161,9 @@
   year={2003},
   organization={Ieee}
 }
+}@misc{KodakDataset,
+  author = {Eastman Kodak Company},
+  title = {True Color Kodak Images},
+  howpublished = {\url{https://r0k.us/graphics/kodak/}},
+  note = {Consultato: 17-10-2023}
+}
