--- a/main.tex
+++ b/main.tex
@@ -58,6 +58,7 @@
     \pagestyle{plain} % comincia a mostrare il numero di pagina
 
     % NOTA: l'ambiente \abstract rimuove il numero della pagina e resetta il contatore delle pagine. 
+    \setcounter{page}{1}
     \chapter*{Sommario}
     Questo elaborato esplora il campo emergente della compressione delle immagini utilizzando l'intelligenza artificiale. L’obiettivo principale è studiare e analizzare le tecniche esistenti per la compressione delle immagini, nello specifico quelle che fanno uso di autoencoder.\\
     Nel primo capitolo, viene fornita una panoramica dello stato dell’arte della compressione delle immagini utilizzando tecniche tradizionali, fornendo una rapida spiegazione del funzionamento di queste tecniche.\\
